--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,6 @@ endif()
 add_subdirectory(src)
 add_subdirectory(apps)
 
-if (BUILD_TESTING)
-  add_subdirectory(tests)
-endif()
+# if (BUILD_TESTING)
+#   add_subdirectory(tests)
+# endif()
